--- a/Test/App.config
+++ b/Test/App.config
@@ -1,153 +1,174 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Informations.log" />
-      <param name="AppendToFile" value="true" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="5MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <param name="File" value="Logs\Informations.log"/>
+      <param name="AppendToFile" value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="5MB"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n" />
+        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <levelMax value="WARN" />
+        <levelMin value="INFO"/>
+        <levelMax value="WARN"/>
       </filter>
     </appender>
     <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Errors.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Errors.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR" />
-        <levelMax value="FATAL" />
+        <levelMin value="ERROR"/>
+        <levelMax value="FATAL"/>
       </filter>
     </appender>
     <appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Debug.log" />
-      <appendToFile value="true" />
-      <maximumFileSize value="5MB" />
-      <maxSizeRollBackups value="10" />
+      <file value="Logs\Debug.log"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="5MB"/>
+      <maxSizeRollBackups value="10"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline" />
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="DEBUG" />
-        <levelMax value="DEBUG" />
+        <levelMin value="DEBUG"/>
+        <levelMax value="DEBUG"/>
       </filter>
     </appender>
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="ErrorFile" />
-      <appender-ref ref="DebugFile" />
+      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="ErrorFile"/>
+      <appender-ref ref="DebugFile"/>
     </logger>
   </log4net>
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="ESourceName" value="METRANS" />
-    <add key="ELogName" value="IDS_METRANS" />
+    <add key="ESourceName" value="METRANS"/>
+    <add key="ELogName" value="IDS_METRANS"/>
     <!-- В журнал Windows -->
-    <add key="ELog" value="False" />
-    <add key="ELogException" value="False" />
-    <add key="ELogEvent" value="False" />
-    <add key="ELogServices" value="False" />
+    <add key="ELog" value="False"/>
+    <add key="ELogException" value="False"/>
+    <add key="ELogEvent" value="False"/>
+    <add key="ELogServices" value="False"/>
     <!-- В базу данных -->
-    <add key="DBLog" value="False" />
-    <add key="DBLogException" value="False" />
-    <add key="DBLogEvent" value="False" />
-    <add key="DBLogServices" value="True" />
+    <add key="DBLog" value="False"/>
+    <add key="DBLogException" value="False"/>
+    <add key="DBLogEvent" value="False"/>
+    <add key="DBLogServices" value="True"/>
     <!-- В файл на диске -->
-    <add key="FLog" value="True" />
-    <add key="FLogException" value="True" />
-    <add key="FLogEvent" value="True" />
-    <add key="FLogServices" value="True" />
+    <add key="FLog" value="True"/>
+    <add key="FLogException" value="True"/>
+    <add key="FLogEvent" value="True"/>
+    <add key="FLogServices" value="True"/>
   <!-- *********** WEB API    ******************************************** -->
-    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" />
+    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua"/>
     <!--http://159.224.194.27:81-->
     <!--portal.metrans.com.ua-->
-    <add key="WebApiMTUser" value="Arcelor1" />
-    <add key="WebApiMTPSW" value="12345678-" />
-    <add key="WebApiMTApi" value="/api/WagonsTracking" />
+    <add key="WebApiMTUser" value="Arcelor1"/>
+    <add key="WebApiMTPSW" value="12345678-"/>
+    <add key="WebApiMTApi" value="/api/WagonsTracking"/>
     <!-- *********** СЕРВИСЫ ******************************************** -->
     <!-- **************************************************************** -->
     <!--              METRANS                                             -->
     <!-- **************************************************************** -->
     <!-- Подключение к SFTP Метранс -->
-    <add key="Host" value="159.224.194.27" />
-    <add key="Port" value="222" />
-    <add key="User" value="arcelors" />
-    <add key="PSW" value="Fjt8Fyeq45" />
+    <add key="Host" value="159.224.194.27"/>
+    <add key="Port" value="222"/>
+    <add key="User" value="arcelors"/>
+    <add key="PSW" value="Fjt8Fyeq45"/>
     <!-- сервис перенос файлов на подходах -->
-    <add key="fromPathHostTransferApproaches" value="/inbox" />
-    <add key="FileFiltrHostTransferApproaches" value="*.txt" />
-    <add key="toDirPathTransferApproaches" value="C:\txt" />
-    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt" />
-    <add key="DeleteFileHostTransferApproaches" value="True" />
-    <add key="RewriteFileTransferApproaches" value="False" />
+    <add key="fromPathHostTransferApproaches" value="/inbox"/>
+    <add key="FileFiltrHostTransferApproaches" value="*.txt"/>
+    <add key="toDirPathTransferApproaches" value="C:\txt"/>
+    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt"/>
+    <add key="DeleteFileHostTransferApproaches" value="True"/>
+    <add key="RewriteFileTransferApproaches" value="False"/>
     <!-- сервис перенос файлов на станции Кривой Рог -->
-    <add key="fromPathHostTransferArrival" value="/xmlin" />
-    <add key="FileFiltrHostTransferArrival" value="*.xml" />
-    <add key="toDirPathTransferArrival" value="C:\xml" />
-    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml" />
-    <add key="DeleteFileHostTransferArrival" value="True" />
-    <add key="RewriteFileTransferArrival" value="False" />
+    <add key="fromPathHostTransferArrival" value="/xmlin"/>
+    <add key="FileFiltrHostTransferArrival" value="*.xml"/>
+    <add key="toDirPathTransferArrival" value="C:\xml"/>
+    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml"/>
+    <add key="DeleteFileHostTransferArrival" value="True"/>
+    <add key="RewriteFileTransferArrival" value="False"/>
     <!-- сервис TransferApproaches перенос из файлов txt в базу данных METRANS -->
     <!--<add key="IntervalTransferApproaches" value="300" />
     <add key="ActiveTransferApproaches" value="True" />-->
-    <add key="DeleteFileTransferApproaches" value="True" />
+    <add key="DeleteFileTransferApproaches" value="True"/>
     <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
     <!--<add key="IntervalTransferArrival" value="300" />
     <add key="ActiveTransferArrival" value="True" />-->
-    <add key="ArrivalToRailWay" value="True" />
-    <add key="DeleteFileTransferArrival" value="True" />
-    <add key="DayRangeArrivalCars" value="10" />
+    <add key="ArrivalToRailWay" value="True"/>
+    <add key="DeleteFileTransferArrival" value="True"/>
+    <add key="DayRangeArrivalCars" value="10"/>
 
     <!-- сервис переноса положения вагонов TransferWT -->
-    <add key="IntervalTransferWT" value="600" />
-    <add key="ActiveTransferWT" value="True" />
-    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
+    <add key="IntervalTransferWT" value="600"/>
+    <add key="ActiveTransferWT" value="True"/>
+    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00"/>
+    <add key="aspnet:RoslynCompilerLocation" value="roslyn"/>
     
   </appSettings>
   <connectionStrings>
-    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="log"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    <add name="UZ"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    <add name="metrans"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    <add name="IDS"
+      connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
     
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+    </compilers>
+  </system.codedom>
 </configuration>
