--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Moveax.Mvc.ErrorHandler, Version=1.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moveax.Mvc.ErrorHandler.1.2.3.0\lib\net40\Moveax.Mvc.ErrorHandler.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -148,6 +152,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GlobalResource.en.resx</DependentUpon>
     </Compile>
+    <Compile Include="App_LocalResources\IDSMORSResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IDSMORSResource.resx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\Ninject.Web.Common.cs" />
@@ -181,13 +190,16 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Areas\IDSOP\Controllers\HomeController.cs" />
-    <Compile Include="Areas\IDSOP\IDSOPAreaRegistration.cs" />
+    <Compile Include="Areas\IDSMORS\Controllers\HomeController.cs" />
+    <Compile Include="Areas\IDSMORS\IDSMORSAreaRegistration.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\CustomLocationViewEngine.cs" />
+    <Compile Include="Infrastructure\ViewAuthorizeAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -241,9 +253,11 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="Content\view\home-idsop.css" />
+    <Content Include="Content\view\electronic-cards.css" />
+    <Content Include="Content\view\error.css" />
+    <Content Include="Content\view\home-idsmors.css" />
     <Content Include="Content\view\home-menu.css" />
-    <Content Include="Content\view\home.css" />
+    <Content Include="Content\view\idsmors.css" />
     <Content Include="Content\view\ids_layout.css" />
     <Content Include="Content\view\ids_layout.min.css" />
     <Content Include="favicon.ico" />
@@ -270,6 +284,9 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include="Images\access-denied.jpg" />
+    <Content Include="Images\amk_logo.png" />
+    <Content Include="Images\cd-icon-filter.svg" />
     <Content Include="Images\header.jpg" />
     <Content Include="Images\ids-op.jpg" />
     <Content Include="Images\portfolio\fullsize\1.jpg" />
@@ -336,13 +353,15 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="Areas\IDSOP\Views\web.config" />
-    <Content Include="Areas\IDSOP\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\IDSOP\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\IDSOP\Views\Home\Index.cshtml" />
     <Content Include="fonts\websymbols\websymbols-regular-webfont.eot" />
     <Content Include="fonts\websymbols\websymbols-regular-webfont.ttf" />
     <Content Include="fonts\websymbols\websymbols-regular-webfont.woff" />
+    <Content Include="Areas\IDSMORS\Views\web.config" />
+    <Content Include="Areas\IDSMORS\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\IDSMORS\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\IDSMORS\Views\Home\Index.cshtml" />
+    <Content Include="Areas\IDSMORS\Views\Home\ElectronicСards.cshtml" />
+    <Content Include="Areas\IDSMORS\Views\Shared\_IDSMORS.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -432,6 +451,7 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
+    <Content Include="Scripts\view\idsmors\electronic-cards.js" />
     <Content Include="Scripts\view\ids_layout.js" />
     <Content Include="Scripts\view\ids_layout.min.js" />
     <Content Include="Web.config" />
@@ -459,10 +479,13 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_IDS_Layout.cshtml" />
+    <Content Include="Views\Error\Http404.cshtml" />
+    <Content Include="Views\Error\Default.cshtml" />
+    <Content Include="Views\Error\AccessDenied.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\IDSOP\Models\" />
+    <Folder Include="Areas\IDSMORS\Models\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -490,6 +513,10 @@
     <EmbeddedResource Include="App_LocalResources\GlobalResource.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>GlobalResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_LocalResources\IDSMORSResource.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>IDSMORSResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
