--- a/MetransService/packages.config
+++ b/MetransService/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.4.0" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net45" />
 </packages>
