--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -125,7 +125,8 @@
     <!--Подключение к Модулю согласования-->
     <add key="SMS_HOST" value="10.21.2.139" />
     <add key="SMS_PORT" value="8787" />
-    
+    <!-- Получение информации о вагоне -->
+    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
     
   </appSettings>
   <connectionStrings>
