--- a/MetransMorsService/App.config
+++ b/MetransMorsService/App.config
@@ -2,10 +2,9 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -61,8 +60,8 @@
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="ESourceName" value="METRANS" />
-    <add key="ELogName" value="IDS_METRANS" />
+    <add key="ESourceName" value="METRANS_MORS" />
+    <add key="ELogName" value="IDS_MORS_METRANS" />
     <!-- В журнал Windows -->
     <add key="ELog" value="True" />
     <add key="ELogException" value="True" />
@@ -79,59 +78,27 @@
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
     <!-- *********** СЕРВИСЫ  ***************************************** -->
-    <!-- сервис перенос файлов из SFTP Метранс на АМКР -->
-    <add key="ActiveTransferFile" value="True" />
-    <add key="IntervalTransferFile" value="300" />
-    <!-- Подключение к SFTP Метранс -->
-    <add key="Host_res" value="159.224.194.27" />
-    <add key="Host" value="85.198.128.130" />    
-    <add key="Port" value="222" />
-    <add key="User" value="arcelors" />
-    <add key="PSW" value="$fh#ER2J63" />
-    <!-- сервис перенос файлов на подходах -->
-    <add key="fromPathHostTransferApproaches" value="/inbox" />
-    <add key="FileFiltrHostTransferApproaches" value="*.txt" />
-    <add key="toDirPathTransferApproaches" value="C:\txt" />
-    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt" />
-    <add key="DeleteFileHostTransferApproaches" value="True" />
-    <add key="RewriteFileTransferApproaches" value="False" />
-    <!-- сервис перенос файлов на станции Кривой Рог -->
-    <add key="fromPathHostTransferArrival" value="/xmlin" />
-    <add key="FileFiltrHostTransferArrival" value="*.xml" />
-    <add key="toDirPathTransferArrival" value="C:\xml" />
-    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml" />
-    <add key="DeleteFileHostTransferArrival" value="True" />
-    <add key="RewriteFileTransferArrival" value="False" />
-    <!-- сервис TransferApproaches перенос из файлов txt в базу данных METRANS -->
-    <add key="ActiveTransferApproaches" value="True" />
-    <add key="IntervalTransferApproaches" value="300" />
-    <add key="DeleteFileTransferApproaches" value="True" />
-    <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
-    <add key="ActiveTransferArrival" value="True" />
-    <add key="IntervalTransferArrival" value="300" />
-    <add key="ArrivalToRailWay" value="True" />
-    <add key="DeleteFileTransferArrival" value="True" />
-    <add key="DayRangeArrivalCars" value="10" />
-    <!--Подключение к Модулю согласования-->
-    <add key="SMS_HOST" value="10.21.2.139" />
-    <add key="SMS_PORT" value="8787" />
-    <!-- Получение информации о вагоне -->
-    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
+    <!-- сервис переноса положения вагонов TransferWT из WEB API -->
+    <add key="IntervalTransferWT" value="600" />
+    <add key="ActiveTransferWT" value="True" />
+    <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
+    <!--Подключение к WebAPI METRANS-->
+    <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" /><!--http://159.224.194.27:81--><!--portal.metrans.com.ua-->
+    <add key="WebApiMTUser" value="Arcelor1" />
+    <add key="WebApiMTPSW" value="12345678-" />
+    <add key="WebApiMTApi" value="/api/WagonsTracking" />
+    <add key="aspnet:RoslynCompilerLocation" value="roslyn" />
   </appSettings>
   <connectionStrings>
-    <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
   </connectionStrings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -162,18 +129,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="Oracle.ManagedDataAccess.Client" />
-      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
-    </DbProviderFactories>
-  </system.data>
-  <oracle.manageddataaccess.client>
-    <version number="*">
-      <dataSources>
-        <!--<dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />-->
-        <dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) " />
-      </dataSources>
-    </version>
-  </oracle.manageddataaccess.client>
 </configuration>
